--- a/mystyle..css
+++ b/mystyle..css
@@ -1,4 +1,3 @@
-
 <link rel="stylesheet" href="style.css">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -7,9 +6,9 @@
 
   <style>
     h1 {
-      font-size: 50px;
+      font-size: 40px;
       text-align: center;
-      color: white;
+      color: white ;
       margin: 0;
     }
 
@@ -23,7 +22,7 @@
 
     .subnav {
       margin-top: 15px;
-      background-color: black;
+      background-color: transparent;
       padding: 10px;
       border: 1px solid white;
       border-radius: 8px;
@@ -121,3 +120,20 @@
         width: 90%;
       }
     }
+	.section-title {
+  text-align: center;
+  font-size: 2rem;
+  margin: 30px 0 15px;
+  color: #333;
+}
+.big-text {
+  font-size: 24px;
+}
+.sticker {
+  position: absolute;
+  width: 100px;
+  pointer-events: none;
+  user-select: none;
+  transform: rotate(-5deg);
+  z-index: 5;
+}
