--- a/style.css
+++ b/style.css
@@ -1,11 +1,12 @@
 
-<link rel="stylesheet" href="style.css">
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>My First Website</title>
-  <link href="style.css" rel="stylesheet" type="text/css" media="all" />
 
-  <style>
+body{ 
+	background-image: url(https://i.pinimg.com/736x/26/dc/cb/26dccb9722a52c0ef51de82c0e0e8f3f.jpg);
+	color: transparent;
+max-width: 1000px;
+margin-left: auto;
+margin-right: auto;
+}
     h1 {
       font-size: 40px;
       text-align: center;
