--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
 
 body{ 
-	background-image: url(https://i.pinimg.com/1200x/ba/81/0d/ba810dbf061358be2871a349782ece0f.jpg);
+	background-image: url(https://i.imgur.com/LA6SVyW.jpeg);
 	color: transparent;
 max-width: 1000px;
 margin-left: auto;
